unpackaged/main/default/objects/Velocify_History__c/Velocify_History__c.object-meta.xml
<CustomObject>
    <label>Velocify History</label>
    <nameField>
        <displayFormat>VHN-{00000}</displayFormat>
        <label>Velocify History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Velocify History Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>