unpackaged/main/default/objects/Velocify_History__c/fields/Call_Log__c.field-meta.xml
<CustomField>
    <fullName>Call_Log__c</fullName>
    <label>Call Log</label>
    <type>TextArea</type>
</CustomField>