unpackaged/main/default/objects/Velocify_History__c/fields/Call_Log_Status__c.field-meta.xml
<CustomField>
    <fullName>Call_Log_Status__c</fullName>
    <label>Call Log Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>