unpackaged/main/default/objects/Velocify_History__c/fields/Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Source__c</fullName>
    <label>Campaign Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>