unpackaged/main/default/objects/Velocify_History__c/fields/Conversion_date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_date__c</fullName>
    <label>Conversion date</label>
    <type>DateTime</type>
</CustomField>