unpackaged/main/default/objects/Velocify_History__c/fields/Conversion_First_Trader__c.field-meta.xml
<CustomField>
    <fullName>Conversion_First_Trader__c</fullName>
    <label>Conversion First Trader</label>
    <length>90</length>
    <type>Text</type>
</CustomField>