unpackaged/main/default/objects/Velocify_History__c/fields/Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>Email_Bounced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Bounced</label>
    <type>Checkbox</type>
</CustomField>