unpackaged/main/default/objects/Velocify_History__c/fields/Email_Links_Clicked_Count__c.field-meta.xml
<CustomField>
    <fullName>Email_Links_Clicked_Count__c</fullName>
    <label>Email Links Clicked Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>