unpackaged/main/default/objects/Velocify_History__c/fields/First_Assignment_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Assignment_Distribution_Date__c</fullName>
    <label>First Assignment / Distribution Date</label>
    <type>DateTime</type>
</CustomField>