unpackaged/main/default/objects/Velocify_History__c/fields/First_Contact_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Contact_Attempt_Date__c</fullName>
    <label>First Contact Attempt Date</label>
    <type>DateTime</type>
</CustomField>