unpackaged/main/default/objects/Velocify_History__c/fields/First_Contacted__c.field-meta.xml
<CustomField>
    <fullName>First_Contacted__c</fullName>
    <label>First Contacted</label>
    <type>DateTime</type>
</CustomField>