unpackaged/main/default/objects/Velocify_History__c/fields/First_Pitched__c.field-meta.xml
<CustomField>
    <fullName>First_Pitched__c</fullName>
    <label>First Pitched</label>
    <type>DateTime</type>
</CustomField>