unpackaged/main/default/objects/Velocify_History__c/fields/First_Qualified__c.field-meta.xml
<CustomField>
    <fullName>First_Qualified__c</fullName>
    <label>First Qualified</label>
    <type>DateTime</type>
</CustomField>