unpackaged/main/default/objects/Velocify_History__c/fields/First_Trader_POAs__c.field-meta.xml
<CustomField>
    <fullName>First_Trader_POAs__c</fullName>
    <label>First Trader POAs</label>
    <length>90</length>
    <type>Text</type>
</CustomField>