unpackaged/main/default/objects/Velocify_History__c/fields/Future_CE__c.field-meta.xml
<CustomField>
    <fullName>Future_CE__c</fullName>
    <label>Future CE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>