unpackaged/main/default/objects/Velocify_History__c/fields/Last_Action__c.field-meta.xml
<CustomField>
    <fullName>Last_Action__c</fullName>
    <label>Last Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>