unpackaged/main/default/objects/Velocify_History__c/fields/Last_Action_Note__c.field-meta.xml
<CustomField>
    <fullName>Last_Action_Note__c</fullName>
    <label>Last Action Note</label>
    <type>TextArea</type>
</CustomField>