unpackaged/main/default/objects/Velocify_History__c/fields/Last_Assignment_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment_Distribution_Date__c</fullName>
    <label>Last Assignment / Distribution Date</label>
    <type>DateTime</type>
</CustomField>