unpackaged/main/default/objects/Velocify_History__c/fields/Last_Calendar_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Calendar_Event_Date__c</fullName>
    <label>Last Calendar Event Date</label>
    <type>DateTime</type>
</CustomField>