unpackaged/main/default/objects/Velocify_History__c/fields/Last_Contact_Attempt_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Attempt_Date__c</fullName>
    <label>Last Contact Attempt Date</label>
    <type>DateTime</type>
</CustomField>