unpackaged/main/default/objects/Velocify_History__c/fields/Last_Distributed_By_Get_Lead__c.field-meta.xml
<CustomField>
    <fullName>Last_Distributed_By_Get_Lead__c</fullName>
    <label>Last Distributed By/Get Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>