unpackaged/main/default/objects/Velocify_History__c/fields/Last_Email_Link_Clicked_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Link_Clicked_Date__c</fullName>
    <label>Last Email Link Clicked Date</label>
    <type>DateTime</type>
</CustomField>