unpackaged/main/default/objects/Velocify_History__c/fields/Last_Pitched__c.field-meta.xml
<CustomField>
    <fullName>Last_Pitched__c</fullName>
    <label>Last Pitched</label>
    <type>Date</type>
</CustomField>