unpackaged/main/default/objects/Velocify_History__c/fields/Last_Smimesh_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Smimesh_Opt_In_Date__c</fullName>
    <label>Last Smimesh Opt-In Date</label>
    <type>Date</type>
</CustomField>