unpackaged/main/default/objects/Velocify_History__c/fields/Last_transfer_agent__c.field-meta.xml
<CustomField>
    <fullName>Last_transfer_agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last transfer agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Velocify_History_Records2</relationshipName>
    <type>Lookup</type>
</CustomField>