unpackaged/main/default/objects/Velocify_History__c/fields/Lead_Source_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_ID__c</fullName>
    <label>Lead Source ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>