unpackaged/main/default/objects/Velocify_History__c/fields/Next_Calendar_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Calendar_Event_Date__c</fullName>
    <label>Next Calendar Event Date</label>
    <type>DateTime</type>
</CustomField>