unpackaged/main/default/objects/Velocify_History__c/fields/OL_Date__c.field-meta.xml
<CustomField>
    <fullName>OL_Date__c</fullName>
    <label>OL Date</label>
    <type>Date</type>
</CustomField>