unpackaged/main/default/objects/Velocify_History__c/fields/POAs_reception_date__c.field-meta.xml
<CustomField>
    <fullName>POAs_reception_date__c</fullName>
    <label>POAs reception date</label>
    <type>DateTime</type>
</CustomField>