unpackaged/main/default/objects/Velocify_History__c/fields/POAs_submitted_date__c.field-meta.xml
<CustomField>
    <fullName>POAs_submitted_date__c</fullName>
    <label>POAs submitted date</label>
    <type>DateTime</type>
</CustomField>