unpackaged/main/default/objects/Velocify_History__c/fields/Prospect__c.field-meta.xml
<CustomField>
    <fullName>Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Velocify History Records</relationshipLabel>
    <relationshipName>Velocify_History_Records</relationshipName>
    <type>Lookup</type>
</CustomField>