unpackaged/main/default/objects/Velocify_History__c/fields/Prospect_Id__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Id__c</fullName>
    <externalId>true</externalId>
    <label>Prospect Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>