unpackaged/main/default/objects/Velocify_History__c/fields/Prospect_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Name__c</fullName>
    <label>Prospect Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>