unpackaged/main/default/objects/Velocify_History__c/fields/smimesh_campaign_id__c.field-meta.xml
<CustomField>
    <fullName>smimesh_campaign_id__c</fullName>
    <label>smimesh_campaign_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>