unpackaged/main/default/objects/Velocify_History__c/fields/Smimesh_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Smimesh_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smimesh Opt-In</label>
    <type>Checkbox</type>
</CustomField>