unpackaged/main/default/objects/Velocify_History__c/fields/SMS_Date_Last_Delivered__c.field-meta.xml
<CustomField>
    <fullName>SMS_Date_Last_Delivered__c</fullName>
    <label>SMS Date Last Delivered</label>
    <type>DateTime</type>
</CustomField>