unpackaged/main/default/objects/Velocify_History__c/fields/SMS_Date_Last_Interacted__c.field-meta.xml
<CustomField>
    <fullName>SMS_Date_Last_Interacted__c</fullName>
    <label>SMS Date Last Interacted</label>
    <type>DateTime</type>
</CustomField>