unpackaged/main/default/objects/Velocify_History__c/fields/SMS_Date_Last_Received__c.field-meta.xml
<CustomField>
    <fullName>SMS_Date_Last_Received__c</fullName>
    <label>SMS Date Last Received</label>
    <type>DateTime</type>
</CustomField>