unpackaged/main/default/objects/Velocify_History__c/fields/SMS_Delivered_Count__c.field-meta.xml
<CustomField>
    <fullName>SMS_Delivered_Count__c</fullName>
    <label>SMS Delivered Count</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>