unpackaged/main/default/objects/Velocify_History__c/fields/SMS_Last_Delivery_Failed__c.field-meta.xml
<CustomField>
    <fullName>SMS_Last_Delivery_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Last Delivery Failed</label>
    <type>Checkbox</type>
</CustomField>