unpackaged/main/default/objects/Velocify_History__c/fields/SMS_Last_Phone_Delivered_To__c.field-meta.xml
<CustomField>
    <fullName>SMS_Last_Phone_Delivered_To__c</fullName>
    <label>SMS Last Phone Delivered To</label>
    <type>Phone</type>
</CustomField>