unpackaged/main/default/objects/Velocify_History__c/fields/SMS_Last_Received__c.field-meta.xml
<CustomField>
    <fullName>SMS_Last_Received__c</fullName>
    <label>SMS Last Received</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>