unpackaged/main/default/objects/Velocify_History__c/fields/SMS_Last_Received_By_User__c.field-meta.xml
<CustomField>
    <fullName>SMS_Last_Received_By_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMS Last Received By User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Velocify_History_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>