unpackaged/main/default/objects/Velocify_History__c/fields/SMS_Received_Count__c.field-meta.xml
<CustomField>
    <fullName>SMS_Received_Count__c</fullName>
    <label>SMS Received Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>