unpackaged/main/default/objects/Velocify_History__c/fields/Spam_Complaint_Received__c.field-meta.xml
<CustomField>
    <fullName>Spam_Complaint_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spam Complaint Received</label>
    <type>Checkbox</type>
</CustomField>