unpackaged/main/default/objects/Velocify_History__c/fields/TI_PIF__c.field-meta.xml
<CustomField>
    <fullName>TI_PIF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TI PIF</label>
    <type>Checkbox</type>
</CustomField>