unpackaged/main/default/objects/Velocify_History__c/fields/X1st_Payment_date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Payment_date__c</fullName>
    <label>1st Payment date</label>
    <type>DateTime</type>
</CustomField>