unpackaged/main/default/objects/Velocify_History__c/fields/X1st_Smimesh_Opt_In_Date__c.field-meta.xml
<CustomField>
    <fullName>X1st_Smimesh_Opt_In_Date__c</fullName>
    <label>1st Smimesh Opt-In Date</label>
    <type>Date</type>
</CustomField>