unpackaged/main/default/objects/Velocify_History__c/fields/X1st_Trade_Deal__c.field-meta.xml
<CustomField>
    <fullName>X1st_Trade_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1st Trade Deal</label>
    <type>Checkbox</type>
</CustomField>