unpackaged/main/default/objects/Velocify_History__c/fields/X2nd_trade_first_payment__c.field-meta.xml
<CustomField>
    <fullName>X2nd_trade_first_payment__c</fullName>
    <label>2nd trade first payment</label>
    <type>DateTime</type>
</CustomField>