unpackaged/main/default/objects/Velocify_History__c/fields/X2nd_Trade_Quoted__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Trade_Quoted__c</fullName>
    <label>2nd Trade Quoted</label>
    <type>Date</type>
</CustomField>