unpackaged/main/default/objects/Velocify_History__c/fields/X2nd_Trade_RA_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Trade_RA_Date__c</fullName>
    <label>2nd Trade RA Date</label>
    <type>Date</type>
</CustomField>