unpackaged/main/default/objects/Velocify_History__c/fields/X2ndTrader__c.field-meta.xml
<CustomField>
    <fullName>X2ndTrader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2ndTrader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Velocify_History_Records3</relationshipName>
    <type>Lookup</type>
</CustomField>