unpackaged/main/default/objects/Velocify_History__c/fields/X3rd_Trade_1st_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Trade_1st_Payment_Date__c</fullName>
    <label>3rd Trade 1st Payment Date</label>
    <type>DateTime</type>
</CustomField>